--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,44 @@
+@import url('https://fonts.googleapis.com/css2?family=Abel&display=swap');
+
+
+html,
+body,
+#root,
+.app,
+.content {
+  height: 100%;
+  width: 100%;
+  font-family: Abel;
+}
+
+.app {
+  display: flex;
+  position: relative;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+
+/* Track */
+::-webkit-scrollbar-track {
+  background-color: #868484;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background-color: #D9D9D9;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-track:hover {
+  background-color: #D9D9D9;
+}
+
+
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
